ingresshostbase/mike1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vishnuops-game
  labels:
    app: vishnuops-game
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vishnuops-game
  template:
    metadata:
      labels:
        app: vishnuops-game
    spec:
      containers:
      - name: vishnuops-game
        image: vishnu2117/vishnuops-game:v1
        ports:
        - containerPort: 3000
