ingresshostbase/mike1svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: vishnuops-game-svc
spec:
  selector:
    app: vishnuops-game
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
