ingresshostbase/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx  # 👈 This is your ingress class
  rules:
  - host: game.praveens.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vishnuops-game-svc
            port:
              number: 80
  - host: app.praveens.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: myapp-svc
            port:
              number: 80
